# ProjectBPDA

./: .gitignore  Cargo.toml
backend/: backend.py
frontend/: frontend.py
interactor/: Cargo.toml  state.toml
interactor/src/: interactor_main.rs
meta/: Cargo.toml
output/: project.abi.json  project.imports.json  project.mxsc.json  project.wasm  proxy.rs
src/: project.rs
tests/: project_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
